finally solved the scrolling problem, it was that overflow: hidden; inside the body...:P

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ img {
 
 body {
     margin: 0;
-    overflow: hidden;
     font-family: Roboto, sans-serif;
 }
 
@@ -99,6 +98,11 @@ body {
 
 }
 
+.product-list li {
+    float: left;
+    margin: 50px;
+  }
+
 .product-list {
     display: flex;
     gap: 52px;
@@ -111,16 +115,15 @@ body {
     font-weight: bold;
     color: #1f2937;
     padding: 40px;
+    
 }
 
-li {
-    float: left;
-    margin: 50px;
-  }
+
   
 ul {
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
 }
 
 button{
@@ -151,3 +154,23 @@ a {
     text-decoration: none;
     cursor: auto;
     }
+
+.body3 {
+    font-size: 20px;
+    font-weight: light;
+    font-style: italic;
+    color: #1f2937;
+    background-color: lightgray;
+}
+
+.Gamer-quotes {
+    text-align: center;
+    padding-bottom: 50px;
+    padding-left:   80px;
+    padding-right: 80px;
+    padding-top: 50px;
+}
+
+.quotes {
+    padding: 30px;
+}
